<resources>
    <string name="app_name">Filmap</string>
    <string name="email_input">E-mail</string>
    <string name="password_input">Password</string>
    <string name="input_signin">Sign In</string>
    <string name="condition_or">or</string>
    <string name="register_button">Register</string>
    <string name="name_input">Name</string>
    <string name="password_confirmation_input">Confirm password</string>
    <string name="title_activity_filmap">FilmapActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Menu -->
    <string name="menu_near_me">Near Me</string>
    <string name="menu_search">Search</string>
    <string name="menu_my_list">My List</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_logout">Logout</string>

    <!-- My Film List-->
    <string name="error_no_films">You have no films</string>

    <!-- Film activty -->
    <string name="button_watch">Watching</string>
    <string name="button_watch_later">Watch later</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_near">Near</string>
    <string name="title_activity_location">LocationActivity</string>

    <!-- Google-->
    <string name="google_app_id">951200351805</string>

</resources>
