<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_near_me"
            android:icon="@drawable/ic_place_24dp"
            android:title="@string/menu_near_me" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_24dp"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_my_list"
            android:icon="@drawable/ic_list_24dp"
            android:title="@string/menu_my_list" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
    </group>

    <!--
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->

    <item android:title="@string/menu_exit">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_exit_to_app_24dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
